--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -10,16 +10,6 @@
     <version>1.9.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <!--
-        The parent POM is normally retrieved from Maven Central
-        In the event of a build failure, it's possible to remove this definition.
-    -->
-    <parent>
-        <groupId>org.vivoweb</groupId>
-        <artifactId>vivo-project</artifactId>
-        <version>1.9.0-SNAPSHOT</version>
-    </parent>
-
     <name>VIVO Installer</name>
 
     <properties>
@@ -38,6 +28,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.6</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
