VIVO-1252 Incorporate Cornell's DataDistributor API into core Vitro.

--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -1191,6 +1191,16 @@
   </servlet-mapping>
   
   <servlet>
+    <servlet-name>DistributeDataApi</servlet-name>
+    <servlet-class>edu.cornell.mannlib.vitro.webapp.controller.api.DistributeDataApiController</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>DistributeDataApi</servlet-name>
+    <url-pattern>/api/dataRequest/*</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
     <servlet-name>SparqlUpdateApi</servlet-name>
     <servlet-class>edu.cornell.mannlib.vitro.webapp.controller.api.SparqlUpdateApiController</servlet-class>
   </servlet>
