--- a/installer/home/pom.xml
+++ b/installer/home/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.vivoweb</groupId>
-    <artifactId>home</artifactId>
+    <artifactId>vivo-installer-home</artifactId>
     <version>1.9.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
@@ -17,7 +17,7 @@
         <relativePath>..</relativePath>
     </parent>
 
-    <name>VIVO Prepare Home</name>
+    <name>VIVO Install Home</name>
 
     <properties>
         <default-theme>wilma</default-theme>
@@ -51,7 +51,7 @@
                     </plugin>
                     <plugin>
                         <artifactId>maven-antrun-plugin</artifactId>
-                        <version>1.3</version>
+                        <version>1.8</version>
                         <executions>
                             <execution>
                                 <id>remove-webapp</id>
