--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -86,6 +86,13 @@
             <build>
                 <plugins>
                     <plugin>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.8</version>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </plugin>
+                    <plugin>
                         <artifactId>maven-compiler-plugin</artifactId>
                         <version>3.1</version>
                         <executions>
@@ -98,6 +105,13 @@
                                 <phase />
                             </execution>
                         </executions>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <version>2.10</version>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
                     </plugin>
                     <plugin>
                         <artifactId>maven-resources-plugin</artifactId>
