--- a/installer/webapp/pom.xml
+++ b/installer/webapp/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.vivoweb</groupId>
-    <artifactId>vivo</artifactId>
+    <artifactId>vivo-installer-vivo</artifactId>
     <version>1.9.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
@@ -17,7 +17,7 @@
         <relativePath>..</relativePath>
     </parent>
 
-    <name>VIVO Prepare Web App</name>
+    <name>VIVO Install Web App</name>
 
     <profiles>
         <profile>
@@ -66,7 +66,7 @@
                 <plugins>
                     <plugin>
                         <artifactId>maven-antrun-plugin</artifactId>
-                        <version>1.3</version>
+                        <version>1.8</version>
                         <executions>
                             <execution>
                                 <id>remove-webapp</id>
