--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -145,7 +145,7 @@ VitroConnection.DataSource.validationQuery = SELECT 1
 
   #
   # For OpenSocial integration
-  # The path to the key file that will be used qwhen generating security tokens for VIVO and 
+  # The path to the key file that will be used when generating security tokens for VIVO and 
   # shindig to share.
   #
 #OpenSocial.tokenKeyFile = /usr/local/vivo/data/shindig/openssl/securitytokenkey.txt
