--- a/installer/webapp/pom.xml
+++ b/installer/webapp/pom.xml
@@ -141,5 +141,18 @@
             <artifactId>vivo-webapp</artifactId>
             <type>war</type>
         </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
