--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -45,6 +45,10 @@
                     <version>1.8</version>
                 </plugin>
                 <plugin>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>3.0.0</version>
+                </plugin>
+                <plugin>
                     <artifactId>maven-assembly-plugin</artifactId>
                     <version>2.5.5</version>
                 </plugin>
