Add key for Google Maps (Map of Science)

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -217,6 +217,15 @@ VitroConnection.DataSource.validationQuery = SELECT 1
 # OTHER OPTIONS
 # -----------------------------------------------------------------------------
 
+    # Google Maps Key
+    # ---------------
+    # To use the Google Maps (e.g. Map of Science), you need to have a key for Google Maps
+    # See https://developers.google.com/maps/documentation/javascript/get-api-key
+    #
+    # When you have a key, uncomment the line below and add it here
+
+#google.maps.key=
+
    # AltMetric badges
    # ----------------
    # Options to embed AltMetric badges on information resource (e.g. journal article) pages
