Prevent build number plugin breaking build

--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,7 @@
                             <doCheck>false</doCheck>
                             <doUpdate>false</doUpdate>
                             <shortRevisionLength>7</shortRevisionLength>
+                            <revisionOnScmFailure>true</revisionOnScmFailure>
                         </configuration>
                     </plugin>
                 </plugins>
