--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -4,7 +4,7 @@
 #
 # This file is provided as example.runtime.properties.
 #
-# Save a copy of this file as runtime.properties in your Vitro home directory, 
+# Save a copy of this file as runtime.properties in your VIVO home directory, 
 # and edit the properties as needed for your installation.
 #
 # -----------------------------------------------------------------------------
