Update commons-lang to 3.4 (same as used by Jena 3.1.1)

--- a/installer/webapp/src/main/webResources/WEB-INF/classes/log4j.properties
+++ b/installer/webapp/src/main/webResources/WEB-INF/classes/log4j.properties
@@ -46,4 +46,4 @@ log4j.logger.org.apache.jena.sdb.layout2.LoaderTuplesNodes=FATAL
 log4j.logger.org.apache.jena.sdb.sql.SDBConnection=ERROR
 log4j.logger.org.openjena.riot=FATAL
 log4j.logger.org.apache.jena.riot=FATAL
-log4j.logger.org.directwebremoting=FATAL
+log4j.logger.org.directwebremoting=WARN
