--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ env:
   # Give Maven 1GB of memory to work with
   - MAVEN_OPTS=-Xmx1024M
 
+cache:
+  directories:
+  - .autoconf
+  - $HOME/.m2
+
 install:
   - git clone https://github.com/vivo-project/Vitro.git ../Vitro
 
