--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -1474,7 +1474,18 @@
     <servlet-name>OrcidIntegrationController</servlet-name>
     <url-pattern>/orcid/*</url-pattern>
   </servlet-mapping>
-  
+
+
+  <servlet>
+    <display-name>TpfServlet</display-name>
+    <servlet-name>TpfServlet</servlet-name>
+    <servlet-class>org.vivoweb.linkeddatafragments.servlet.VitroLinkedDataFragmentServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>TpfServlet</servlet-name>
+    <url-pattern>/tpf/*</url-pattern>
+  </servlet-mapping>
+
   <!-- ==================== mime types ============================== -->
   
   <mime-mapping>
