--- a/api/pom.xml
+++ b/api/pom.xml
@@ -69,6 +69,11 @@
             <version>2.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.xml</groupId>
+            <artifactId>jaxrpc</artifactId>
+            <version>1.1</version>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
