--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>org.vivoweb</groupId>
     <artifactId>vivo-project</artifactId>
-    <version>1.10.0-SNAPSHOT</version>
+    <version>1.10.0-beta1</version>
     <packaging>pom</packaging>
 
     <name>VIVO</name>
