--- a/installer/solr/pom.xml
+++ b/installer/solr/pom.xml
@@ -7,13 +7,13 @@
 
     <groupId>org.vivoweb</groupId>
     <artifactId>vivo-installer-solr</artifactId>
-    <version>1.10.0-beta1</version>
+    <version>1.10.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <parent>
         <groupId>org.vivoweb</groupId>
         <artifactId>vivo-installer</artifactId>
-        <version>1.10.0-beta1</version>
+        <version>1.10.0-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
 
