--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -162,15 +162,15 @@
     <filter-class>org.apache.catalina.filters.ExpiresFilter</filter-class>
     <init-param>
       <param-name>ExpiresByType image</param-name>
-      <param-value>access plus 10 minutes</param-value>
+      <param-value>access plus 1 week</param-value>
     </init-param>
     <init-param>
       <param-name>ExpiresByType text/css</param-name>
-      <param-value>access plus 10 minutes</param-value>
+      <param-value>access plus 1 week</param-value>
     </init-param>
     <init-param>
       <param-name>ExpiresByType application/javascript</param-name>
-      <param-value>access plus 10 minutes</param-value>
+      <param-value>access plus 1 week</param-value>
     </init-param>
   </filter>
   <filter-mapping>
