--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -195,23 +195,13 @@ VitroConnection.DataSource.validationQuery = SELECT 1
 # orcid.clientId = 0000-0000-0000-000X
 # orcid.clientPassword = 00000000-0000-0000-0000-000000000000
 # orcid.webappBaseUrl = http://localhost:8080/vivo
-# orcid.messageVersion = 1.0.23
 # orcid.externalIdCommonName = VIVO Cornell Identifier
 
-# ---- Setup for the sandbox ----
+# 1.2, 2.0
+# orcid.apiVersion = 1.2
 
-# orcid.publicApiBaseUrl     = http://pub.sandbox.orcid.org/v1.1
-# orcid.authorizedApiBaseUrl = http://api.sandbox.orcid.org/v1.1
-# orcid.oauthAuthorizeUrl    = http://sandbox.orcid.org/oauth/authorize
-# orcid.oauthTokenUrl        = http://api.sandbox.orcid.org/oauth/token
-
-# ---- or for the mockorcid webapp ----
-
-# orcid.publicApiBaseUrl     = http://localhost:8080/mockorcid/mock/
-# orcid.authorizedApiBaseUrl = http://localhost:8080/mockorcid/mock/
-# orcid.oauthAuthorizeUrl    = http://localhost:8080/mockorcid/mock/oauth/authorize
-# orcid.oauthTokenUrl        = http://localhost:8080/mockorcid/mock/oauth/token
-
+# release, sandbox
+# orcid.api = sandbox
 
 # -----------------------------------------------------------------------------
 # OTHER OPTIONS
