Make compatible with servlet 2.5 spec

--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -904,7 +904,20 @@
     <servlet-name>SearchController</servlet-name>
     <url-pattern>/search</url-pattern>
   </servlet-mapping>
-  
+
+  <servlet>
+    <servlet-name>FedSearchController</servlet-name>
+    <servlet-class>edu.cornell.mannlib.vitro.webapp.search.controller.FedSearchController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FedSearchController</servlet-name>
+    <url-pattern>/ctsasearch</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>FedSearchController</servlet-name>
+    <url-pattern>/FS.xml</url-pattern>
+  </servlet-mapping>
+
   <servlet>
     <servlet-name>SearchHelpController</servlet-name>
     <servlet-class>edu.cornell.mannlib.vitro.webapp.search.controller.SearchHelpController</servlet-class>
