--- a/api/pom.xml
+++ b/api/pom.xml
@@ -71,7 +71,7 @@
         </dependency>
         <dependency>
             <groupId>javax.xml</groupId>
-            <artifactId>jaxrpc</artifactId>
+            <artifactId>jaxrpc-api</artifactId>
             <version>1.1</version>
         </dependency>
 
