--- a/api/pom.xml
+++ b/api/pom.xml
@@ -31,6 +31,16 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>fluent-hc</artifactId>
+            <version>4.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>itextpdf</artifactId>
             <version>5.5.12</version>
@@ -54,13 +64,7 @@
         <dependency>
             <groupId>org.vivoweb</groupId>
             <artifactId>orcid-api-client</artifactId>
-            <version>0.5.1</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.fasterxml.jackson.core</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
+            <version>0.6.0</version>
         </dependency>
 
         <dependency>
