Maven-ized languages project for next release of VIVO

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,21 @@
-.project
-.DS_Store
-*~
+/.build/
+/deploy.properties
+/build.properties
+/runtime.properties
+/ontology/public/catalog-v0001.xml
 
+rdf/auth/firsttime/test-user-model.owl
+utilities/solrtester/.work
+utilities/rdbmigration/.work
+
+**/.idea
+**/*.iml
+**/target
+
+**/overlays
+
+# Eclipse artifacts
+**/.settings
+**/.classpath
+**/.project
+**/bin/
