[VIVO-1470] Cross-platform improvements for Maven

--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -15,6 +15,7 @@
     <properties>
         <vitro-version>${project.version}</vitro-version>
         <maven-site-plugin.skip>true</maven-site-plugin.skip>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <build>
