--- a/pom.xml
+++ b/pom.xml
@@ -418,6 +418,18 @@
             <name>VIVO Dependencies</name>
             <url>https://raw.github.com/vivo-project/dependencies/master/</url>
         </repository>
+
+        <repository>
+            <id>sonatype-nexus-snapshots</id>
+            <name>Sonatype Nexus Snapshots</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
     </repositories>
 
     <distributionManagement>
