--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /build.properties
 /runtime.properties
 /ontology/public/catalog-v0001.xml
+settings.xml
 
 rdf/auth/firsttime/test-user-model.owl
 utilities/solrtester/.work
@@ -11,8 +12,8 @@ utilities/rdbmigration/.work
 **/.idea
 **/*.iml
 **/target
-
 **/overlays
+*~
 
 # Eclipse artifacts
 **/.settings
