--- a/pom.xml
+++ b/pom.xml
@@ -298,7 +298,7 @@
                         <path>
                             <groupId>com.google.errorprone</groupId>
                             <artifactId>error_prone_core</artifactId>
-                            <version>2.3.2-SNAPSHOT</version>
+                            <version>2.3.2</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
